--- a/Slides/package.json
+++ b/Slides/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tabs",
+  "name": "slides",
   "version": "1.1.1",
-  "description": "TABS: An Ionic project",
+  "description": "Slides: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
