--- a/Bienal/package.json
+++ b/Bienal/package.json
@@ -1,18 +1,34 @@
 {
   "name": "bienaldeartejoven",
-  "version": "1.1.1",
+  "version": "1.7.5",
   "description": "BienalDeArteJoven: An Ionic project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "body-parser": "^1.15.2",
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.5.3",
+    "morgan": "^1.7.0",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SpeedBienal/app-bienal.git"
+  },
+  "author": "PabloEFerreyra",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/SpeedBienal/app-bienal/issues"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
@@ -22,5 +38,21 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [],
+  "homepage": "https://github.com/SpeedBienal/app-bienal#readme",
+  "main": "./www/js/app.js",
+  "scripts": {
+    "test": "null"
+  },
+  "keywords": [
+    "bienal",
+    "arte",
+    "joven",
+    "2016",
+    "api",
+    "app",
+    "restful",
+    "mongo",
+    "ionic"
+  ]
 }
